--- a/sleeping.html
+++ b/sleeping.html
@@ -3,192 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chagai Booking Calendar</title>
+    <title>Bern Booking Calendar</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
-        :root {
-            --primary-color: #ff6b6b;
-            --secondary-color: #4ecdc4;
-            --accent-color: #feca57;
-            --background-color: #f7f1e3;
-            --text-color: #2d3436;
-            --calendar-bg: #ffffff;
-            --calendar-border: #d1d1e0;
-            --day-bg: #f0f0f5;
-            --day-hover: #e6e6fa;
-            --header-bg: #6c5ce7;
-        }
-        body {
-            font-family: 'Poppins', sans-serif;
-            margin: 0;
-            padding: 10px;
-            background-color: var(--background-color);
-            color: var(--text-color);
-            font-size: 14px;
-        }
-        .container { max-width: 100%; margin: 0 auto; }
-        .welcome-message {
-            background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-            background-size: 400% 400%;
-            animation: gradient 15s ease infinite;
-            color: white;
-            padding: 20px;
-            text-align: center;
-            font-size: 24px;
-            margin-bottom: 20px;
-            border-radius: 15px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-            font-weight: 600;
-            letter-spacing: 1px;
-            text-transform: uppercase;
-            overflow: hidden;
-            position: relative;
-        }
-        @keyframes gradient {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
-        }
-        .controls {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 15px;
-        }
-        .button {
-            background-color: var(--primary-color);
-            color: white;
-            border: none;
-            padding: 10px 15px;
-            cursor: pointer;
-            font-size: 14px;
-            border-radius: 30px;
-            transition: all 0.3s ease;
-            font-weight: 600;
-            display: flex;
-            align-items: center;
-            gap: 5px;
-        }
-        .calendar-grid {
-            display: grid;
-            grid-template-columns: repeat(7, 1fr);
-            gap: 1px;
-            background-color: #d1d1e0;
-            border: 1px solid #d1d1e0;
-            border-radius: 10px;
-            overflow: hidden;
-        }
-        .calendar-header {
-            background-color: var(--header-bg);
-            color: white;
-            padding: 8px 0;
-            text-align: center;
-            font-weight: 600;
-            font-size: 12px;
-        }
-        .calendar-day {
-            background-color: #ffffff;
-            padding: 5px;
-            min-height: 60px;
-            font-size: 12px;
-            border: 1px solid #e0e0e0;
-            display: flex;
-            flex-direction: column;
-        }
-        .date {
-            font-weight: 600;
-            color: var(--primary-color);
-            font-size: 14px;
-            margin-bottom: 2px;
-        }
-        .guest {
-            font-size: 10px;
-            margin-bottom: 1px;
-            padding: 2px 4px;
-            border-radius: 10px;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            color: #34495e;
-            border: 1px solid rgba(0,0,0,0.1);
-        }
-        .form-container {
-            background-color: var(--calendar-bg);
-            padding: 15px;
-            border-radius: 15px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-            margin-bottom: 20px;
-            border: 2px solid var(--calendar-border);
-        }
-        .form { display: flex; flex-direction: column; gap: 10px; }
-        input, select {
-            padding: 10px;
-            font-size: 14px;
-            border: 1px solid var(--calendar-border);
-            border-radius: 5px;
-            font-family: 'Poppins', sans-serif;
-        }
-        h2 {
-            color: var(--primary-color);
-            margin: 0 0 10px 0;
-            font-size: 18px;
-            font-weight: 600;
-        }
-        #currentMonthYear {
-            font-size: 18px;
-            color: var(--header-bg);
-            font-weight: 600;
-        }
+        body{font-family:'Poppins',sans-serif;margin:0;padding:20px;background:#f7f1e3;color:#2d3436;}
+        .container{max-width:800px;margin:0 auto;}
+        .welcome-message{background:linear-gradient(-45deg,#ee7752,#e73c7e,#23a6d5,#23d5ab);background-size:400% 400%;animation:gradient 15s ease infinite;color:white;padding:40px;text-align:center;font-size:48px;margin-bottom:30px;border-radius:15px;box-shadow:0 10px 20px rgba(0,0,0,0.1);font-weight:600;letter-spacing:1px;text-transform:uppercase;overflow:hidden;position:relative;}
+        .welcome-message::before{content:"BERN IS WAITING FOR YOU!";position:absolute;top:0;left:0;width:100%;height:100%;background:inherit;display:flex;align-items:center;justify-content:center;animation:rotate-in 8s ease-in-out infinite;}
+        @keyframes gradient{0%{background-position:0% 50%;}50%{background-position:100% 50%;}100%{background-position:0% 50%;}}
+        @keyframes rotate-in{0%,100%{transform:translateZ(-100px) rotateY(0deg);opacity:0;}25%,75%{transform:translateZ(0) rotateY(360deg);opacity:1;}50%{transform:translateZ(100px) rotateY(720deg);opacity:1;}}
+        .button{background:#ff6b6b;color:white;border:none;padding:10px 20px;cursor:pointer;font-size:0.9em;border-radius:30px;transition:all 0.3s ease;font-weight:600;}
+        .calendar-grid{display:grid;grid-template-columns:repeat(7,1fr);gap:1px;background:#d1d1e0;border:1px solid #d1d1e0;border-radius:10px;overflow:hidden;}
+        .calendar-header{background:#6c5ce7;color:white;padding:10px 0;text-align:center;font-weight:600;font-size:0.9em;}
+        .calendar-day{background:white;padding:5px;height:80px;font-size:0.9em;border:1px solid #e0e0e0;display:flex;flex-direction:column;}
+        .date{font-weight:600;color:#ff6b6b;font-size:1em;}
+        .guest{font-size:0.75em;margin-bottom:2px;padding:3px 6px;border-radius:12px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:500;box-shadow:0 1px 2px rgba(0,0,0,0.1);color:#34495e;border:1px solid rgba(0,0,0,0.1);}
+        .form-container{background:white;padding:20px;border-radius:15px;box-shadow:0 10px 20px rgba(0,0,0,0.1);margin-bottom:20px;border:2px solid #d1d1e0;}
+        .form{display:flex;gap:10px;flex-wrap:wrap;}
+        input{flex:1;min-width:150px;padding:10px;border-radius:8px;border:1px solid #d1d1e0;}
+        h2{color:#ff6b6b;margin-top:0;margin-bottom:15px;font-weight:600;font-size:1.2em;}
+        @media (max-width:768px){body{padding:10px;}.welcome-message{font-size:24px;padding:20px;}.form{flex-direction:column;}.button{width:100%;}.calendar-day{height:60px;}}
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="welcome-message">CHAGAI IS WAITING FOR YOU!</div>
+        <div class="welcome-message">BERN IS WAITING FOR YOU!</div>
         <div class="form-container">
-            <h2><i class="far fa-calendar-alt"></i> Book Your Stay</h2>
+            <h2>When are you staying?</h2>
             <div class="form">
                 <input type="text" id="newGuestName" placeholder="Your Name">
                 <input type="date" id="bookStartDate">
                 <input type="date" id="bookEndDate">
-                <button id="bookStayBtn" class="button"><i class="fas fa-check"></i> Save</button>
+                <button id="bookStayBtn" class="button">Save</button>
             </div>
         </div>
-        <div class="controls">
-            <button id="prevBtn" class="button"><i class="fas fa-chevron-left"></i> Prev</button>
-            <div id="currentMonthYear"></div>
-            <button id="nextBtn" class="button">Next <i class="fas fa-chevron-right"></i></button>
+        <div class="form-container">
+            <button id="prevMonth" class="button">Previous</button>
+            <h2 id="currentMonthYear"></h2>
+            <button id="nextMonth" class="button">Next</button>
         </div>
-        <div id="calendarContainer" class="calendar-container"></div>
+        <div id="calendarContainer"></div>
+        <div class="form-container">
+            <h2>Update Your Stay</h2>
+            <div class="form">
+                <input type="text" id="guestName" placeholder="Your Name">
+                <input type="date" id="newStartDate">
+                <input type="date" id="newEndDate">
+                <button id="updateStayBtn" class="button">Update Stay</button>
+            </div>
+        </div>
     </div>
     <script>
-        const days = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
+        const days = ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'];
         let currentDate = new Date();
         let bookings = [];
-
-        const colors = [
-            '#AED6F1', '#F5B7B1', '#A9DFBF', '#FAD7A0', '#D2B4DE',
-            '#A3E4D7', '#F9E79F', '#D5DBDB', '#ABEBC6', '#F5CBA7',
-            '#AEB6BF', '#FADBD8', '#D1F2EB', '#FCF3CF', '#D6EAF8'
-        ];
+        const colors = ['#AED6F1', '#F5B7B1', '#A9DFBF', '#FAD7A0', '#D2B4DE', '#A3E4D7', '#F9E79F', '#D5DBDB', '#ABEBC6', '#F5CBA7', '#AEB6BF', '#FADBD8', '#D1F2EB', '#FCF3CF', '#D6EAF8'];
 
         function loadBookings() {
             const storedBookings = localStorage.getItem('bookings');
-            if (storedBookings) {
-                bookings = JSON.parse(storedBookings);
-            }
-            console.log('Loaded bookings:', bookings);
+            bookings = storedBookings ? JSON.parse(storedBookings) : [];
         }
 
         function saveBookings() {
             localStorage.setItem('bookings', JSON.stringify(bookings));
-            console.log('Saved bookings:', bookings);
         }
 
         function bookStay(name, startDate, endDate) {
-            if (!name || !startDate || !endDate) {
-                throw new Error("All fields are required");
-            }
+            if (!name || !startDate || !endDate) throw new Error("All fields are required");
             const start = new Date(startDate);
             const end = new Date(endDate);
             for (let d = new Date(start); d <= end; d.setDate(d.getDate() + 1)) {
@@ -197,9 +78,13 @@
             saveBookings();
         }
 
+        function updateStay(name, newStartDate, newEndDate) {
+            bookings = bookings.filter(booking => booking.name !== name);
+            bookStay(name, newStartDate, newEndDate);
+        }
+
         function getGuestsForDay(date) {
-            const dateString = date.toISOString().split('T')[0];
-            return bookings.filter(booking => booking.date === dateString);
+            return bookings.filter(booking => booking.date === date.toISOString().split('T')[0]);
         }
 
         function renderCalendar() {
@@ -207,30 +92,23 @@
             containerEl.innerHTML = '';
             const calendarGrid = document.createElement('div');
             calendarGrid.className = 'calendar-grid';
-            
             days.forEach(day => {
                 const headerEl = document.createElement('div');
                 headerEl.className = 'calendar-header';
-                headerEl.textContent = day.slice(0, 3);
+                headerEl.textContent = day;
                 calendarGrid.appendChild(headerEl);
             });
-
             const monthStart = new Date(currentDate.getFullYear(), currentDate.getMonth(), 1);
             const monthEnd = new Date(currentDate.getFullYear(), currentDate.getMonth() + 1, 0);
-
             for (let d = 0; d < monthStart.getDay(); d++) {
                 calendarGrid.appendChild(document.createElement('div'));
             }
-
             for (let d = 1; d <= monthEnd.getDate(); d++) {
-                const date = new Date(currentDate.getFullYear(), currentDate.getMonth(), d);
+                const dayDate = new Date(currentDate.getFullYear(), currentDate.getMonth(), d);
                 const dayEl = document.createElement('div');
                 dayEl.className = 'calendar-day';
-                const dateEl = document.createElement('div');
-                dateEl.className = 'date';
-                dateEl.textContent = d;
-                dayEl.appendChild(dateEl);
-                const guestsForDay = getGuestsForDay(date);
+                dayEl.innerHTML = `<div class="date">${d}</div>`;
+                const guestsForDay = getGuestsForDay(dayDate);
                 guestsForDay.forEach((guest, index) => {
                     const guestEl = document.createElement('div');
                     guestEl.className = 'guest';
@@ -240,17 +118,16 @@
                 });
                 calendarGrid.appendChild(dayEl);
             }
-
             containerEl.appendChild(calendarGrid);
-            document.getElementById('currentMonthYear').textContent = currentDate.toLocaleString('en-US', { month: 'long', year: 'numeric' });
+            document.getElementById('currentMonthYear').textContent = currentDate.toLocaleString('default', { month: 'long', year: 'numeric' });
         }
 
-        document.getElementById('prevBtn').addEventListener('click', () => {
+        document.getElementById('prevMonth').addEventListener('click', () => {
             currentDate.setMonth(currentDate.getMonth() - 1);
             renderCalendar();
         });
 
-        document.getElementById('nextBtn').addEventListener('click', () => {
+        document.getElementById('nextMonth').addEventListener('click', () => {
             currentDate.setMonth(currentDate.getMonth() + 1);
             renderCalendar();
         });
@@ -265,6 +142,21 @@
                 document.getElementById('newGuestName').value = '';
                 document.getElementById('bookStartDate').value = '';
                 document.getElementById('bookEndDate').value = '';
+            } catch (error) {
+                alert(error.message);
+            }
+        });
+
+        document.getElementById('updateStayBtn').addEventListener('click', () => {
+            const name = document.getElementById('guestName').value.trim();
+            const newStartDate = document.getElementById('newStartDate').value;
+            const newEndDate = document.getElementById('newEndDate').value;
+            try {
+                updateStay(name, newStartDate, newEndDate);
+                renderCalendar();
+                document.getElementById('guestName').value = '';
+                document.getElementById('newStartDate').value = '';
+                document.getElementById('newEndDate').value = '';
             } catch (error) {
                 alert(error.message);
             }
