--- a/sleeping.html
+++ b/sleeping.html
@@ -22,6 +22,8 @@
         .form{display:flex;gap:10px;flex-wrap:wrap;}
         input{flex:1;min-width:150px;padding:10px;border-radius:8px;border:1px solid #d1d1e0;}
         h2{color:#ff6b6b;margin-top:0;margin-bottom:15px;font-weight:600;font-size:1.2em;}
+        .controls{display:flex;justify-content:space-between;align-items:center;margin-bottom:15px;}
+        #currentMonthYear{font-size:1.3em;color:#6c5ce7;font-weight:600;}
         @media (max-width:768px){body{padding:10px;}.welcome-message{font-size:24px;padding:20px;}.form{flex-direction:column;}.button{width:100%;}.calendar-day{height:60px;}}
     </style>
 </head>
@@ -37,7 +39,7 @@
                 <button id="bookStayBtn" class="button">Save</button>
             </div>
         </div>
-        <div class="form-container">
+        <div class="controls">
             <button id="prevMonth" class="button">Previous</button>
             <h2 id="currentMonthYear"></h2>
             <button id="nextMonth" class="button">Next</button>
@@ -62,6 +64,17 @@
         function loadBookings() {
             const storedBookings = localStorage.getItem('bookings');
             bookings = storedBookings ? JSON.parse(storedBookings) : [];
+            if (bookings.length === 0) {
+                // Add initial bookings if none exist
+                const initialBookings = [
+                    { name: "Casper", startDate: '2024-09-01', endDate: '2024-09-03' },
+                    { name: "Balthazar", startDate: '2024-09-05', endDate: '2024-09-07' },
+                    { name: "Melchior", startDate: '2024-09-10', endDate: '2024-09-12' }
+                ];
+                initialBookings.forEach(booking => {
+                    bookStay(booking.name, booking.startDate, booking.endDate);
+                });
+            }
         }
 
         function saveBookings() {
