--- a/mobile.html
+++ b/mobile.html
@@ -196,71 +196,9 @@
         </div>
     </div>
     <script type="module">
-        import { days, bookings as initialBookings } from './booking-system.js';
+        import { bookings, days, getGuestsForDay, bookStay, updateStay } from './booking-system.js';
 
         let currentDate = new Date();
-
-        const colors = [
-            '#AED6F1', '#F5B7B1', '#A9DFBF', '#FAD7A0', '#D2B4DE',
-            '#A3E4D7', '#F9E79F', '#D5DBDB', '#ABEBC6', '#F5CBA7',
-            '#AEB6BF', '#FADBD8', '#D1F2EB', '#FCF3CF', '#D6EAF8'
-        ];
-
-        let bookings = [];
-
-        function loadBookings() {
-            const storedBookings = localStorage.getItem('bookings');
-            if (storedBookings) {
-                bookings = JSON.parse(storedBookings, (key, value) => {
-                    if (key === 'startDate' || key === 'endDate') {
-                        return new Date(value);
-                    }
-                    return value;
-                });
-            } else {
-                bookings = initialBookings.map(booking => ({
-                    ...booking,
-                    startDate: new Date(booking.startDate),
-                    endDate: new Date(booking.endDate)
-                }));
-                saveBookings();
-            }
-        }
-
-        function saveBookings() {
-            localStorage.setItem('bookings', JSON.stringify(bookings));
-        }
-
-        function bookStay(name, startDate, endDate) {
-            const start = new Date(startDate);
-            const end = new Date(endDate);
-            if (start > end) {
-                throw new Error("End date must be after start date");
-            }
-            bookings.push({ name, startDate: start, endDate: end });
-            saveBookings();
-        }
-
-        function updateStay(name, newStartDate, newEndDate) {
-            const bookingIndex = bookings.findIndex(booking => booking.name === name);
-            if (bookingIndex === -1) {
-                throw new Error("Booking not found");
-            }
-            const start = new Date(newStartDate);
-            const end = new Date(newEndDate);
-            if (start > end) {
-                throw new Error("End date must be after start date");
-            }
-            bookings[bookingIndex].startDate = start;
-            bookings[bookingIndex].endDate = end;
-            saveBookings();
-        }
-
-        function getGuestsForDay(date) {
-            return bookings.filter(booking => 
-                date >= booking.startDate && date <= booking.endDate
-            );
-        }
 
         function renderCalendar() {
             const containerEl = document.getElementById('calendarContainer');
@@ -292,11 +230,11 @@
                 dateEl.textContent = i;
                 dayEl.appendChild(dateEl);
                 const guestsForDay = getGuestsForDay(date);
-                guestsForDay.forEach((guest, index) => {
+                guestsForDay.forEach((guest) => {
                     const guestEl = document.createElement('div');
                     guestEl.className = 'guest';
                     guestEl.textContent = guest.name;
-                    guestEl.style.backgroundColor = colors[index % colors.length];
+                    guestEl.style.backgroundColor = guest.color;
                     dayEl.appendChild(guestEl);
                 });
                 gridEl.appendChild(dayEl);
@@ -344,7 +282,6 @@
             }
         });
 
-        loadBookings();
         renderCalendar();
     </script>
 </body>
